experimental/internal/lexer/testdata/braces/unopened.proto.stderr.txt
error: encountered unmatched `)` delimiter
  --> testdata/braces/unopened.proto:1:1
   |
 1 | )
   | ^ expected a closing `(`

encountered 1 error
